experiment with boost::asio

--- a/src/makefile
+++ b/src/makefile
@@ -1,6 +1,8 @@
 main:
-	g++ -Wall -Wextra main.cpp -std=c++11 -pthread
+	g++ -Wall -Wextra main.cpp -std=c++11 -lboost_system -lpthread
 
+asio:
+	g++ -g -Wall -Wextra asio_test.cpp -std=c++11 -lboost_system -lpthread
 run:
 	./a.out
 
