--- a/src/makefile
+++ b/src/makefile
@@ -1,5 +1,5 @@
 main:
-	g++ -g -Wall -Wextra ../lib/practicalSocket.cpp main.cpp -std=c++14 -lssl -lcrypto -pthread
+	g++ -g -Wall -Wextra practicalSocket.cpp openSSLBearer.cpp smtpSocket.cpp smtpSender.cpp protocolMinion.cpp passwd.cpp commandParser.cpp commandLoader.cpp scribe.cpp beholder.cpp overseer.cpp main.cpp -std=c++14 -lssl -lcrypto -pthread
 
 run:
 	./a.out
