--- a/test/commandIOMinion/CMakeLists.txt
+++ b/test/commandIOMinion/CMakeLists.txt
@@ -5,7 +5,7 @@ project(componentTest)
 add_definitions(-std=c++14 -Wall -Wextra)
 #set(PROJECT_SOURCE_DIR done)
 find_package (Threads REQUIRED)
-set(NAME commandLoaderTest)
+set(NAME commandIOMinionTest)
 file(GLOB SRCS *.cpp)
 set(MAIN ../main.cpp)
 add_executable(${NAME} ${SRCS} ${MAIN})
